--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,16 +1,47 @@
 /*PC*/
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
 
 }
 
-/*TABLET*/
-@media (min-width: 740px and max-width: 1023px) {
+/*TABLET & MOBILE*/
+@media (max-width: 63.9375em) {
+    .btn {
+        padding: 15px 16px;
+    }
 
+    .contact-form .form-control {
+        padding: 15px;
+        font-size: 16px;
+    }
+
+    .contact-info {
+        line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 18px;
+    }
+
+    .socials-list {
+        font-size: 48px;
+    }
+
+    #footer .socials-list a {
+        margin: 0 8px;
+    }
+
+    #footer .copy-right a {
+        padding: 12px 0;
+        display: inline-block;
+    }
+
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
 }
-
 
 /*MOBILE*/
-@media (max-width: 700px) {
+@media (max-width: 46.1875em) {
     .s-full-width,
     .s-col-full {
         width: 100% !important;
@@ -63,8 +94,7 @@
     }
 
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px;
     }
-
 }
 
